Kubernetes/manifest/myapp.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp
  labels:
    name: myapp
spec:
  containers:
  - name: myapp
    image: surahio29/surahiorepo:v1
    ports:
      - containerPort: 80
