Kubernetes/manifest/zong.yaml
apiVersion: v1
kind: Pod
metadata:
  name: zong-uat
  labels:
    name: zong
    type: uat
spec:
  containers:
  - name: zong-cont
    image: centos/httpd
    ports:
      - containerPort: 80
---

apiVersion: v1
kind: Pod
metadata:
  name: zong-stagging
  labels:
    name: zong
    type: stagging
spec:
  containers:
  - name: zong-cont
    image: centos/httpd
    ports:
      - containerPort: 80

---

apiVersion: v1
kind: Pod
metadata:
  name: zong-prod
  labels:
    name: zong
    type: prod
spec:
  containers:
  - name: zong-cont
    image: centos/httpd
    ports:
      - containerPort: 80

---


 kubectl get apiVersion: v1
 kind: Pod
 metadata:
   name: myapp
   labels:
     name: myapp
 spec:
   containers:
   - name: myapp
     image: surahio29/surahiorepo:v1
     ports:
       - containerPort: 80
