Kubernetes/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-example
  rules:
  - http:
      paths:
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: http-svc
            port:
              number: 80
  - nginx:
      paths:
      - path: /products
        pathType: Prefix
        backend:
          service:
            name: nginx-svc
            port:
              number: 80  



k3s kubectl port-forward -n kube-system “$(kubectl get pods -n kube-system| grep ‘^traefik-‘ | awk ‘{print $1}’)” 9000:9000 Forwarding from 127.0.0.1:9000 -> 9000
